--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:name=".activity.ProjectApplication"
         android:allowBackup="true"
         android:icon="@drawable/my_launcher_icon"
+        android:roundIcon="@drawable/my_launcher_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.RelativesContactRecorder"
