--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,5 @@
 pluginManagement {
     repositories {
-        maven {
-            url 'https://maven.aliyun.com/repository/public/'
-        }
         google()
         mavenCentral()
         gradlePluginPortal()
@@ -13,6 +10,7 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 rootProject.name = "RelativesContactRecorder"
