--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,17 @@ android {
         versionName "0.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
 
     android.applicationVariants.all { variant ->
-        variant.outputs.all{
+        variant.outputs.all {
             outputFileName = "RelativesContactRecorder-${variant.name}-${variant.versionName}.apk"
         }
     }
@@ -64,11 +71,17 @@ android {
         viewBinding true
         dataBinding true
     }
+    configurations.all {
+        resolutionStrategy {
+            force("androidx.core:core-ktx:1.9.0")
+        }
+    }
 }
 
 dependencies {
+    implementation files('libs/lunar-1.3.3.jar')
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
@@ -81,6 +94,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation("androidx.room:room-runtime:2.5.0")
+    implementation 'androidx.room:room-ktx:2.5.0'
     kapt("androidx.room:room-compiler:2.5.0")
     implementation 'com.guolindev.permissionx:permissionx:1.7.1'
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
