--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         <activity
             android:name=".activity.MainActivity"
             android:exported="true"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.RelativesContactRecorder">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
